# Elfin

./: README.md  com.kerembayulgen.elfin.json  meson.build  pyproject.toml  python3-jellyfin-apiclient-python.json  python3-pillow.json  python3-requests.json
data/: com.kerembayulgen.elfin.desktop.in  com.kerembayulgen.elfin.gschema.xml  com.kerembayulgen.elfin.metainfo.xml.in  com.kerembayulgen.elfin.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: elfin.gresource.xml  elfin.in  main.py  meson.build  style.css
src/gtk/: edit_metadata.blp  help_overlay.blp  home_screen.blp  initial_setup.blp  library_folder.blp  media_cover.blp  media_grid.blp  media_page.blp  sidebar.blp  window.blp
src/types/: __init__.py  jellyfin_letter_search.py  jellyfin_media_folders.py  jellyfin_metadata.py
src/widgets/: edit_metadata.py  home_screen.py  initial_setup.py  library_folder.py  media_cover.py  media_grid.py  media_page.py  sidebar.py  window.py
